--- a/02 interpolation/newton_chenyejin.ipynb
+++ b/02 interpolation/newton_chenyejin.ipynb
@@ -11,12 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Implement Newton Interpolation"
+    "# Implement Newton Interpolation\n",
+    "\n",
+    "The Newton interpolation algorithm is a method to construct this polynomial function. It works by finding the coefficients of the polynomial one by one, starting from the constant term (the term without any variables) and working its way up to the higher-order terms."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,24 +26,24 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "def newton_interpolation(x, y, x_new):\n",
-    "    n = len(x) # number of data points\n",
-    "    p = y.copy() # copy y or python will use the reference of y which is not what we want\n",
-    "    for k in range(1, n): # k is the degree of the polynomial\n",
-    "        for i in range(n-k): # i is the index of the polynomial\n",
-    "            p[i] = (p[i+1] - p[i]) / (x[i+k] - x[i]) # divided difference\n",
-    "        for i in range(n-k): # i is the index of the polynomial\n",
-    "            p[i+1] = p[i] # shift the polynomial to the left\n",
+    "    n = len(x)  # number of data points\n",
+    "    p = y.copy()  # copy y or python will use the reference of y which is not what we want\n",
+    "    for k in range(1, n):  # k is the degree of the polynomial\n",
+    "        for i in range(n-k):  # i is the index of the polynomial\n",
+    "            p[i] = (p[i+1] - p[i]) / (x[i+k] - x[i])  # divided difference\n",
+    "        for i in range(n-k):  # i is the index of the polynomial\n",
+    "            p[i+1] = p[i]  # shift the polynomial to the left\n",
     "    \n",
     "    def eval_poly(x_val):\n",
-    "        result = p[0] \n",
-    "        for i in range(1, n):\n",
-    "            term = p[i] \n",
-    "            for j in range(i):\n",
-    "                term *= (x_val - x[j])\n",
-    "            result += term\n",
-    "        return result\n",
+    "        result = p[0]  # initialize result with the constant term\n",
+    "        for i in range(1, n):  # loop through the coefficients\n",
+    "            term = p[i]  # initialize the current term with the coefficient\n",
+    "            for j in range(i):  # loop to calculate the current term\n",
+    "                term *= (x_val - x[j])  # multiply by (x_val - x[j])\n",
+    "            result += term  # add the current term to the result\n",
+    "        return result  # return the computed polynomial value\n",
     "    \n",
-    "    return [eval_poly(x_val) for x_val in x_new]"
+    "    return [eval_poly(x_val) for x_val in x_new]  # evaluate the polynomial for each value in x_new"
    ]
   },
   {
